en/2.9/_sources/index.rst.txt
.. Read the Docs Template documentation master file, created by
   sphinx-quickstart on Tue Aug 26 14:19:49 2014.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

Welcome to Netris documentation!
==================================================

Netris is the automatic NetOps platform that runs the physical network and provides cloud-like user experience for NetOps and DevOps engineers.

Contents:

.. toctree::
   :maxdepth: 2
   :caption: Getting Started

   concepts
   controller-installation
   controller-k8s-installation
   controller-initial-configuration
   switch-agent-installation
   SoftGate-agent-installation

.. toctree::
   :maxdepth: 4
   :caption: Network Policies

   network-policies

.. toctree::
   :maxdepth: 4
   :caption: Network Services

   services

.. toctree::
   :maxdepth: 4
   :caption: Operations

   visibility
   accounts
   

.. toctree::
   :maxdepth: 4
   :caption: Updates
   
   release-notes

.. toctree::
   :maxdepth: 2
   :caption: Sandboxes

   sandbox/index