en/3.0/_sources/index.rst.txt
.. Read the Docs Template documentation master file, created by
   sphinx-quickstart on Tue Aug 26 14:19:49 2014.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

Welcome to Netris Documentation
==================================================

Netris is the Automatic NetOps platform that runs the physical network and provides cloud-like user experience for NetOps and DevOps engineers.

.. toctree::
   :maxdepth: 2
   :caption: Tutorials

   tutorials/index

.. toctree::
   :maxdepth: 4
   :caption: Cloud Native Tools

   kubernetes-integration
   terraform-integration

.. toctree::
   :maxdepth: 2
   :caption: Netris Fundamentals

   introduction
   netris-architecture
   supported-networks

.. toctree::
   :maxdepth: 2
   :caption: Detailed Installation

   installation
   switch-agent-installation
   SoftGate-installation
   SoftGate-PRO-installation

.. toctree::
   :maxdepth: 2
   :caption: Switch-fabric Configuration

   definitions
   ipam
   topology-management
   switch-ports

.. toctree::
   :maxdepth: 4
   :caption: Network Policies

   network-policies

.. toctree::
   :maxdepth: 4
   :caption: Network Services

   vnet
   l3-load-balancer
   l4-load-balancer
   acls
   roh

.. toctree::
   :maxdepth: 4
   :caption: Operations

   visibility
   accounts
   
.. toctree::
   :maxdepth: 4
   :caption: Updates

   release-notes
   softgate-performance

.. toctree::
   :maxdepth: 4
   :caption: Lab Scenarios
   
   onprem-k8s
